# bouvet-one-2023-oktober-slange-olje

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  compute.pyx  main.py  presentasjon.html  pyproject.toml  setup.py
src/: lib.rs
