[package]
name = "rustne-slanger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3"
crate-type = ["cdylib"]

[dependencies]
num = "0.4.3"
pyo3 = { version =  "0.22.0", features = ["extension-module"] }


[profile.release]
debug = true
lto = true
codegen-units = 1
