[tool.poetry]
name = "slangeolje"
version = "0.1.0"
description = ""
authors = ["Sindre Nistad <sindre.nistad@bouvet.no>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<=3.13"
pygame = "^2.5.2"
numpy = "^2.1.2"
matplotlib = "^3.8.0"
maturin = "^1.7.4"


[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rustne-slanger"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
